# ucom-decoder

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  oxts.dbu
example_data/: 260121_SN62090.cfg
example_data/dbu/: mobile.dbu  oxts.dbu
licences/: MIT.txt  pybind11_LICENSE.txt
test/: README.txt  mobile.dbu  pyproject.toml  requirements.txt  run_tests.bat  run_tests.sh  test_csv.py
test/src/ucomgen/: crc.py  dbx.py  generator.py  ucom_definitions.py
ucom_decoder/: CMakeLists.txt  application.cpp  args.cpp  args.hpp  cmd_line_quitter.cpp  cmd_line_quitter.hpp  crc.cpp  duration.cpp  help.hpp  input_file.cpp  quitter.hpp  socket_helper.cpp  socket_helper.hpp  string_helpers.hpp  texts.hpp  ucom_data.cpp  ucom_data.hpp  ucom_dbu.cpp  ucom_dbu.hpp  ucom_decoder.cpp  ucom_decoder_app.cpp  ucom_decoder_app.hpp  ucom_message.cpp  ucom_message.hpp  ucom_signal.cpp
ucom_decoder/UCOM_241120_SN62084/: 241120_SN62084.cfg
ucom_decoder/include/ucom/: crc.hpp  example_ucom_data.hpp  string_helpers.hpp  triggers.hpp  ucom_data.hpp  ucom_dbu.hpp  ucom_message.hpp  ucom_signal.hpp  ucom_triggers.hpp  ucom_value.hpp
ucom_decoder/include/ucom/enum/: BasicType.hpp
ucom_decoder/src/: crc.cpp  triggers.cpp  ucom_data.cpp  ucom_dbu.cpp  ucom_message.cpp  ucom_signal.cpp  ucom_value.cpp
ucom_decoder_py/: CMakeLists.txt  pyproject.toml  ucom_py_bindings.cpp
ucom_decoder_py/examples/: test_ucompy.py
ucom_decoder_py/examples/ucom_to_csv/: test.bat  ucom_to_csv.py  udp_socket.py
ucom_decoder_py/tests/: data.py  mobile.dbu  requirements.txt  run_tests.bat  run_tests.sh  test_ucom_data.py  test_ucom_dbu.py  test_ucom_message.py  test_ucom_signal.py  test_ucomgenerator.py
ucom_to_csv/: CMakeLists.txt  application.hpp  args.hpp  quitter.cpp  socket_helper.cpp  texts.hpp  ucom_decoder_app.cpp  ucom_decoder_app.hpp
ucom_to_csv/include/: application.hpp  args.hpp  cmd_line_quitter.hpp  duration.hpp  input_file.hpp  quitter.hpp  socket_helper.hpp  texts.hpp  ucom_decoder_app.hpp
ucom_to_csv/src/: application.cpp  args.cpp  cmd_line_quitter.cpp  duration.cpp  input_file.cpp  quitter.cpp  socket_helper.cpp  ucom_decoder.cpp  ucom_decoder_app.cpp
